feat(Auth): in progress 80%

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "cSpell.words": [
+    "browserslist",
     "chakra",
     "fontsource",
+    "Formik",
+    "semibold",
     "signup"
   ]
 }
