--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,18 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "chakra-ui-steps": "^1.5.0",
+    "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "framer-motion": "^5.5.5",
+    "moment": "^2.29.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
