--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1"
+    "firebase-admin": "^10.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "prisma": {
     "schema": "src/models/prisma/schema.prisma"
