--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
+    "@choc-ui/chakra-autocomplete": "^4.22.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/inter": "^4.5.1",
+    "@fontsource/lobster": "^4.5.9",
     "@fontsource/work-sans": "^4.5.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -17,7 +19,7 @@
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "framer-motion": "^5.5.5",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
