--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
+    "nanoid": "^3.3.3",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "slugify": "^1.6.5"
   },
   "prisma": {
     "schema": "src/models/prisma/schema.prisma"
