feat(Auth): add register profile page if user not exist in database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
     "Dropzone",
     "fontsource",
     "Formik",
+    "rufina",
     "semibold",
-    "signup"
+    "signup",
+    "toastify"
   ]
 }
