--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,8 @@
     "@choc-ui/chakra-autocomplete": "^4.22.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/inter": "^4.5.1",
-    "@fontsource/lobster": "^4.5.9",
-    "@fontsource/work-sans": "^4.5.2",
+    "@fontsource/quicksand": "^4.5.9",
+    "@fontsource/rufina": "^4.5.8",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
